fixed z-index of flip card and added box shadow

--- a/src/app/layouts/home/home.component.css
+++ b/src/app/layouts/home/home.component.css
@@ -103,6 +103,8 @@ mat-toolbar {
 
 .main-content {
 
+    z-index: 2;
+    position: relative;
     grid-area: main-content;
     border-top: 2px solid lightgrey;
     background-color: rgba(55, 55, 55, 0.4);
@@ -121,13 +123,14 @@ mat-toolbar {
 .footer {
 
     position: relative;
+    z-index: 1;
     font-size: 0.8em;
     grid-area: footer;
     background-color: rgb(39, 39, 39);
     border-radius: 2px;
-    -webkit-box-shadow: 0px -5px 12px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px -5px 12px -1px rgba(0,0,0,0.75);
-    box-shadow: 0px -5px 12px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px -5px 12px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px -5px 12px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px -5px 12px -1px rgba(0, 0, 0, 0.75);
 }
 
 main {
@@ -245,7 +248,6 @@ main {
     .card-front {
 
         height: 100%;
-        z-index: 2;
         transform: rotateY(0deg);
     }
 
@@ -267,6 +269,9 @@ main {
         height: calc(100% + 65px);
         background-color: rgb(39, 39, 39);
         transform: rotateY(170deg);
+        -webkit-box-shadow: 2px 2px 5px 1px rgba(180, 180, 180, 0.75);
+        -moz-box-shadow: 2px 2px 5px 1px rgba(180, 180, 180, 0.75);
+        box-shadow: 2px 2px 5px 1px rgba(180, 180, 180, 0.75);
     }
 
     .go-button {
